test/libsolidity/syntaxTests/unterminatedBlocks/zero_dot.sol
contract c {
    function f() pure public { 0.
// ----
// ParserError 2314: (47-47): Expected identifier but got end of source
